--- a/src/index.html
+++ b/src/index.html
@@ -44,63 +44,71 @@
     </div>
   </nav>
 
-  <div class="container">
+  <div class="jumbotron">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <h1>fiba Metallbau GmbH</h1>
+          <p class="intro-text">Ihr Partner für <mark>Autounterstände</mark>, <mark>Balköne</mark>, <mark>Balkonverglasungen</mark>, <mark>Einzelanfertigungen</mark>, <mark>Fenstergittern</mark>, <mark>Gartenlauben</mark>, <mark>Gartentüren</mark>, <mark>Geländer</mark>, <mark>Glasdächer</mark>, <mark>Glastüren</mark>, <mark>Grillartikel</mark>, <mark>Rettungsleitern</mark>, <mark>Skulpturen</mark>, <mark>Tischen</mark>, <mark>Treppen</mark> und vieles mehr!
+        </div>
+        <div class="col-md-6">
+          <div id="carousel-fiba" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carousel-fiba" data-slide-to="0" class="active"></li>
+              <li data-target="#carousel-fiba" data-slide-to="1"></li>
+              <li data-target="#carousel-fiba" data-slide-to="2"></li>
+              <li data-target="#carousel-fiba" data-slide-to="3"></li>
+            </ol>
 
-    <div id="carousel-fiba" class="carousel slide col-md-6 col-md-offset-3" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#carousel-fiba" data-slide-to="0" class="active"></li>
-        <li data-target="#carousel-fiba" data-slide-to="1"></li>
-        <li data-target="#carousel-fiba" data-slide-to="2"></li>
-        <li data-target="#carousel-fiba" data-slide-to="3"></li>
-      </ol>
+            <div class="carousel-inner" role="listbox">
+              <div class="item active">
+                <img src="img/gelaender.jpg" alt="Gel&auml;nder">
+                <div class="carousel-caption">
+                  <h3>Gel&auml;nder</h3>
+                  <span>Gel&auml;nder Beschreibung blablabla</span>
+                </div>
+              </div>
+              <div class="item">
+                <img src="img/balkone.jpg" alt="Balkone">
+                <div class="carousel-caption">
+                  <h3>Balkone</h3>
+                  <span>Balkone Beschreibung blablabla</span>
+                </div>
+              </div>
+              <div class="item">
+                <img src="img/grillartikel.jpg" alt="Grillartikel">
+                <div class="carousel-caption">
+                  <h3>Grillartikel</h3>
+                  <span>Grillartikel Beschreibung blablabla</span>
+                </div>
+              </div>
+              <div class="item">
+                <img src="img/treppen.jpg" alt="Treppen">
+                <div class="carousel-caption">
+                  <h3>Treppen</h3>
+                  <pspanTreppen Beschreibung blablabla</span>
+                </div>
+              </div>
+            </div>
 
-      <div class="carousel-inner" role="listbox">
-        <div class="item active">
-          <img src="img/gelaender.jpg" alt="Gel&auml;nder">
-          <div class="carousel-caption">
-            <h3>Gel&auml;nder</h3>
-            <p>Gel&auml;nder Beschreibung blablabla</p>
+            <a class="left carousel-control" href="#carousel-fiba" role="button" data-slide="prev">
+              <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+              <span class="sr-only">Vorw&auml;rts</span>
+            </a>
+            <a class="right carousel-control" href="#carousel-fiba" role="button" data-slide="next">
+              <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+              <span class="sr-only">R&uuml;ckw&auml;s</span>
+            </a>
           </div>
         </div>
-        <div class="item">
-          <img src="img/balkone.jpg" alt="Balkone">
-          <div class="carousel-caption">
-            <h3>Balkone</h3>
-            <p>Balkone Beschreibung blablabla</p>
-          </div>
-        </div>
-        <div class="item">
-          <img src="img/grillartikel.jpg" alt="Grillartikel">
-          <div class="carousel-caption">
-            <h3>Grillartikel</h3>
-            <p>Grillartikel Beschreibung blablabla</p>
-          </div>
-        </div>
-        <div class="item">
-          <img src="img/treppen.jpg" alt="Treppen">
-          <div class="carousel-caption">
-            <h3>Treppen</h3>
-            <p>Treppen Beschreibung blablabla</p>
-          </div>
-        </div>
+
       </div>
-
-      <a class="left carousel-control" href="#carousel-fiba" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Vorw&auml;rts</span>
-      </a>
-      <a class="right carousel-control" href="#carousel-fiba" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">R&uuml;ckw&auml;s</span>
-      </a>
     </div>
 
-  </div>
-
-  <!-- Bootstrap core JavaScript -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-  <script src="js/bootstrap.js"></script>
-  <!--<script src="/js/bootstrap.min.js"></script>-->
+    <!-- Bootstrap core JavaScript -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="js/bootstrap.js"></script>
+    <!--<script src="/js/bootstrap.min.js"></script>-->
 </body>
 </body>
 
