Update the default layout

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <meta name="description" content="">
   <meta name="author" content="">
-  <title>Willkommen bei Fiba Metallbau GmbH :-)</title>
+  <title>Fiba Metallbau GmbH</title>
   <!-- Bootstrap -->
   <link href="css/bootstrap.css" rel="stylesheet">
   <!--<link href="css/bootstrap.min.css" rel="stylesheet">-->
@@ -32,13 +32,13 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Project name</a>
+        <a class="navbar-brand" href="#">fiba</a>
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#about">über uns</a></li>
+          <li><a href="#contact">produkte</a></li>
+          <li><a href="#contact">kontakt</a></li>
         </ul>
       </div>
     </div>
@@ -48,8 +48,24 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
+          <!--<p><img src="img/fiba.jpg"></p>-->
           <h1>fiba Metallbau GmbH</h1>
-          <p class="intro-text">Ihr Partner für <mark>Autounterstände</mark>, <mark>Balköne</mark>, <mark>Balkonverglasungen</mark>, <mark>Einzelanfertigungen</mark>, <mark>Fenstergittern</mark>, <mark>Gartenlauben</mark>, <mark>Gartentüren</mark>, <mark>Geländer</mark>, <mark>Glasdächer</mark>, <mark>Glastüren</mark>, <mark>Grillartikel</mark>, <mark>Rettungsleitern</mark>, <mark>Skulpturen</mark>, <mark>Tischen</mark>, <mark>Treppen</mark> und vieles mehr!
+          <p class="intro-text">Ihr Partner für
+            <mark>Autounterstände</mark>,
+            <mark>Balköne</mark>,
+            <mark>Balkonverglasungen</mark>,
+            <mark>Einzelanfertigungen</mark>,
+            <mark>Fenstergittern</mark>,
+            <mark>Gartenlauben</mark>,
+            <mark>Gartentüren</mark>,
+            <mark>Geländer</mark>,
+            <mark>Glasdächer</mark>,
+            <mark>Glastüren</mark>,
+            <mark>Grillartikel</mark>,
+            <mark>Rettungsleitern</mark>,
+            <mark>Skulpturen</mark>,
+            <mark>Tischen</mark>,
+            <mark>Treppen</mark> und vieles mehr!</p>
         </div>
         <div class="col-md-6">
           <div id="carousel-fiba" class="carousel slide" data-ride="carousel">
@@ -86,7 +102,7 @@
                 <img src="img/treppen.jpg" alt="Treppen">
                 <div class="carousel-caption">
                   <h3>Treppen</h3>
-                  <pspanTreppen Beschreibung blablabla</span>
+                  <span>Beschreibung blablabla</span>
                 </div>
               </div>
             </div>
@@ -104,11 +120,141 @@
 
       </div>
     </div>
+  </div>
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="js/bootstrap.js"></script>
-    <!--<script src="/js/bootstrap.min.js"></script>-->
+  <div class="jumbotron  fiba-header">
+    <div class="container">
+      <h4>über uns</h4>
+    </div>
+  </div>
+
+  <div class="container fiba-content">
+    <div class="row">
+      <div class="col-md-6">
+        <table class="table table-condensed">
+          <tr>
+            <td>1987</td>
+            <td>Gründung der Einzelfirma fiba Paul Fischbacher, Schlosserei Metallbau mit Werkstatt in Mettschlatt</td>
+          </tr>
+          <tr>
+            <td>1995</td>
+            <td>Umzug in die Werkhalle des ehemaligen Baugeschäftes Roost am Schulweg 5 in Unterschlatt</td>
+          </tr>
+          <tr>
+            <td>ab 1996</td>
+            <td>Ausbildung von Metallbau-Lehrlingen</td>
+          </tr>
+          <tr>
+            <td>1999</td>
+            <td>Umwandlung der Einzelfirma in fiba Metallbau GmbH Inhaber sind Paul und Monika Fischbacher</td>
+          </tr>
+          <tr>
+            <td>1999</td>
+            <td>Kauf der Liegenschaft am Schulweg 5</td>
+          </tr>
+          <tr>
+            <td>2001</td>
+            <td>Verdoppelung der Werkstattgrundfläche</td>
+          </tr>
+        </table>
+      </div>
+      <div class="col-md-6">
+        <p>Mit einem Team von bestens qualifizierten Berufsleuten sowie modernen Maschinen und Einrichtungen sind wir (fast)
+          jeder Aufgabe gewachsen. Praktisch alle Arbeitsvorgänge weren in unserem Hause abgewickelt. Zur Erstellung der
+          Planungsunterlagen dient uns eine leistungsfähige CAD-Anlage. Die Montagen am Bau werden durch unsere Mitarbeiter
+          ausgeführt. Zu unseren Auftraggebern gehören private Bauherren genauso wie Architekten und Generalunternehmungen.</p>
+        <p>Mitglied Berufsband Schweizerische Metall-Union</p>
+        <p>Mitglied im IGVD Industrie- und Gewerbeverein Bezirk Diessenhofen</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="jumbotron  fiba-header">
+    <div class="container">
+      <h4>produkte (SOLL)</h4>
+    </div>
+  </div>
+
+  <div class="container fiba-content">
+    <div class="row">
+      <div class="row">
+        <div class="col-xs-6 col-md-3  gallery-row">
+          <img src="http://placehold.it/200x150" class="img-responsive">
+        </div>
+        <div class="col-xs-6 col-md-3  gallery-row">
+          <img src="http://placehold.it/200x150" class="img-responsive">
+        </div>
+        <div class="col-xs-6 col-md-3  gallery-row">
+          <img src="http://placehold.it/200x150" class="img-responsive">
+        </div>
+        <div class="col-xs-6 col-md-3  gallery-row">
+          <img src="http://placehold.it/200x150" class="img-responsive">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-6 col-md-3  gallery-row">
+          <img src="http://placehold.it/200x150" class="img-responsive">
+        </div>
+        <div class="col-xs-6 col-md-3  gallery-row">
+          <img src="http://placehold.it/200x150" class="img-responsive">
+        </div>
+        <div class="col-xs-6 col-md-3  gallery-row">
+          <img src="http://placehold.it/200x150" class="img-responsive">
+        </div>
+        <div class="col-xs-6 col-md-3  gallery-row">
+          <img src="http://placehold.it/200x150" class="img-responsive">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-6 col-md-3  gallery-row">
+          <img src="http://placehold.it/200x150" class="img-responsive">
+        </div>
+        <div class="col-xs-6 col-md-3  gallery-row">
+          <img src="http://placehold.it/200x150" class="img-responsive">
+        </div>
+        <div class="col-xs-6 col-md-3  gallery-row">
+          <img src="http://placehold.it/200x150" class="img-responsive">
+        </div>
+        <div class="col-xs-6 col-md-3  gallery-row">
+          <img src="http://placehold.it/200x150" class="img-responsive">
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="jumbotron  fiba-header">
+    <div class="container">
+      <h4>produkte</h4>
+    </div>
+  </div>
+
+  <div class="container fiba-content">
+    <div class="row">
+      <div class="col-md-12">
+
+      </div>
+    </div>
+  </div>
+
+  <div class="jumbotron  fiba-header">
+    <div class="container">
+      <h4>kontakt</h4>
+    </div>
+  </div>
+
+  <div class="container fiba-content">
+    <div class="row">
+      <div class="col-md-12">
+        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+      </div>
+    </div>
+  </div>
+
+
+  <!-- Bootstrap core JavaScript -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="js/bootstrap.js"></script>
+  <!--<script src="/js/bootstrap.min.js"></script>-->
 </body>
 </body>
 
