Upgrade vendor files to cdn links

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
   <meta name="author" content="">
   <title>Fiba Metallbau GmbH</title>
   <!-- Bootstrap -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/nanogallery.min.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/nanogallery/5.8.0/css/nanogallery.min.css">
   <link href="css/fiba.css" rel="stylesheet">
   <link rel="shortcut icon" href="favicon.ico" />
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -217,10 +217,10 @@
     </div>
   </footer>
 
-  <script src="js/jquery-2.1.4.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="js/jquery.nanogallery.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD1A4IPgz-UOGBRHy6iRxyqCDSl6GSUtcw&signed_in=true&libraries=places&callback=init"
+  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/nanogallery/5.8.0/jquery.nanogallery.min.js"></script>
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD1A4IPgz-UOGBRHy6iRxyqCDSl6GSUtcw&signed_in=true&libraries=places&callback=init"
   async defer></script>
 
   <script type="text/javascript">
