--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="keywords" content="fiba Metallbau GmbH, Autounterstand, Balkon, Balkonverglasung, Einzelanfertigung, Fenstergitter, Gartenlaube, Gartentüre, Geländer, Glasdach, Glastüre, Grillartikel, Rettungsleiter, Skulptur, Tisch, Treppe">
+  <meta name="author" content="Dominique Huber">
+  <meta name="description" content="Firmenpräsentation der fiba Metallbau GmbH">
   <title>Fiba Metallbau GmbH</title>
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
