--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,10 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <h1>fiba Metallbau GmbH</h1>
+          <img src="img/logo.jpg" alt="Fiba Metallbau GmbH Logo" />
+          <br />
+          <br />
+          <br />
           <p class="intro-text">Ihr Partner für
             <mark>Autounterstände</mark>,
             <mark>Balköne</mark>,
@@ -89,28 +92,24 @@
                 <img src="img/gelaender.jpg" alt="Gel&auml;nder">
                 <div class="carousel-caption">
                   <h3>Gel&auml;nder</h3>
-                  <span>Gel&auml;nder Beschreibung blablabla</span>
                 </div>
               </div>
               <div class="item">
                 <img src="img/balkone.jpg" alt="Balkone">
                 <div class="carousel-caption">
                   <h3>Balkone</h3>
-                  <span>Balkone Beschreibung blablabla</span>
                 </div>
               </div>
               <div class="item">
                 <img src="img/grillartikel.jpg" alt="Grillartikel">
                 <div class="carousel-caption">
                   <h3>Grillartikel</h3>
-                  <span>Grillartikel Beschreibung blablabla</span>
                 </div>
               </div>
               <div class="item">
                 <img src="img/treppen.jpg" alt="Treppen">
                 <div class="carousel-caption">
                   <h3>Treppen</h3>
-                  <span>Beschreibung blablabla</span>
                 </div>
               </div>
             </div>
