Display products as first category

--- a/src/index.html
+++ b/src/index.html
@@ -39,8 +39,8 @@
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li><a href="#about">Über uns</a></li>
           <li><a href="#products">Produkte</a></li>
+          <li><a href="#about">Über uns</a></li>
           <li><a href="#contact">Kontakt</a></li>
         </ul>
         <div id="nav-contact">
@@ -63,7 +63,7 @@
           <br />
           <p class="intro-text">Ihr Partner für
             <mark>Autounterstände</mark>,
-            <mark>Balköne</mark>,
+            <mark>Balkone</mark>,
             <mark>Balkonverglasungen</mark>,
             <mark>Einzelanfertigungen</mark>,
             <mark>Fenstergitter</mark>,
@@ -128,6 +128,20 @@
       </div>
     </div>
   </div>
+  
+  <div class="jumbotron  fiba-header" id="products">
+    <div class="container">
+      <h3>Produkte</h3>
+    </div>
+  </div>
+
+  <div class="container fiba-content">
+    <div class="row">
+      <div class="col-md-12">
+        <div id="nanoGallery1"></div>
+      </div>
+    </div>
+  </div>
 
   <div class="jumbotron  fiba-header" id="about">
     <div class="container">
@@ -172,20 +186,6 @@
           ausgeführt. Zu unseren Auftraggebern gehören private Bauherren genauso wie Architekten und Generalunternehmungen.</p>
         <p>Mitglied Berufsband Schweizerische Metall-Union</p>
         <p>Mitglied im IGVD Industrie- und Gewerbeverein Bezirk Diessenhofen</p>
-      </div>
-    </div>
-  </div>
-
-  <div class="jumbotron  fiba-header" id="products">
-    <div class="container">
-      <h3>Produkte</h3>
-    </div>
-  </div>
-
-  <div class="container fiba-content">
-    <div class="row">
-      <div class="col-md-12">
-        <div id="nanoGallery1"></div>
       </div>
     </div>
   </div>
