--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,7 @@
         <ul class="nav navbar-nav">
           <li><a href="#products">Produkte</a></li>
           <li><a href="#about">Über uns</a></li>
+          <li><a href="#jobs">Offene Stellen</a></li>
           <li><a href="#contact">Kontakt</a></li>
         </ul>
         <div id="nav-contact">
@@ -129,7 +130,7 @@
     </div>
   </div>
 
-  <div class="jumbotron  fiba-header" id="products">
+  <div class="jumbotron fiba-header" id="products">
     <div class="container">
       <h3>Produkte</h3>
     </div>
@@ -143,7 +144,7 @@
     </div>
   </div>
 
-  <div class="jumbotron  fiba-header" id="about">
+  <div class="jumbotron fiba-header" id="about">
     <div class="container">
       <h3>Über uns</h3>
     </div>
@@ -190,7 +191,7 @@
     </div>
   </div>
 
-  <div class="jumbotron  fiba-header" id="about">
+  <div class="jumbotron fiba-header" id="jobs">
     <div class="container">
       <h3>Offene Stellen</h3>
     </div>
@@ -211,7 +212,7 @@
     </div>
   </div>
 
-  <div class="jumbotron  fiba-header-contact" id="contact">
+  <div class="jumbotron fiba-header-contact" id="contact">
     <div class="container">
       <h3>Kontakt</h3>
     </div>
