Add link to fiba-grillprodukte.ch and update jobs

--- a/src/index.html
+++ b/src/index.html
@@ -78,6 +78,9 @@
             <mark>Skulpturen</mark>,
             <mark>Tische</mark>,
             <mark>Treppen</mark> und vieles mehr!</p>
+          <br />
+          <p>Ab sofort ist die neue Homepage für unser umfangreiches Grill-Sortiment online.<br /><a href="http://www.fiba-grillprodukte.ch"
+              target="_blank">www.fiba-grillprodukte.ch</a></p>
         </div>
         <div class="col-md-6">
           <div id="carousel-fiba" class="carousel slide" data-ride="carousel">
@@ -201,7 +204,7 @@
     <div class="row">
       <div class="col-md-12">
         <p>Zur Ergänzung unseres Teams suchen wir Dich!</p>
-        <h3>Metallbaumonteur</h3>
+        <h3>Metallbauer</h3>
         <br>
         <p>Du hast eine Berufsausbildung im Metallbau, arbeitest selbstständig sowie zuverlässig und bist ein Teamplayer.</p>
         <p>Wir sind ein Kleinbetrieb und bieten ein kollegiales und herausforderndes Arbeitsumfeld mit abwechslungsreichen Aufträgen.</p>
