--- a/src/index.html
+++ b/src/index.html
@@ -203,8 +203,8 @@
   <div class="container fiba-content">
     <div class="row">
       <div class="col-md-12">
-        <p>Zur Ergänzung unseres Teams suchen wir Dich!</p>
-        <h3>Metallbauer</h3>
+        <p>Zur Ergänzung unseres Teams suchen wir doppelte Unterstützung!</p>
+        <h3>Metallbauer und Chefmonteur Metallbau</h3>
         <br>
         <p>Du hast eine Berufsausbildung im Metallbau, arbeitest selbstständig sowie zuverlässig und bist ein Teamplayer.</p>
         <p>Wir sind ein Kleinbetrieb und bieten ein kollegiales und herausforderndes Arbeitsumfeld mit abwechslungsreichen Aufträgen.</p>
@@ -249,26 +249,26 @@
     async defer></script>
 
   <script type="text/javascript">
-    $(document).ready(function () {
-      $("#nanoGallery1").nanoGallery({
-        kind: 'flickr',
-        userID: '134427604@N05',
-        thumbnailGutterWidth: 40,
-        thumbnailGutterHeight: 40,
-        thumbnailLabel: {
-          hideIcons: true
-        },
-        breadcrumbAutoHideTopLevel: true,
-        albumSorting: 'titleAsc',
-        photoSorting: 'titleAsc',
-        colorScheme: 'light',
-        i18n: {
-          breadcrumbHome: 'fiba Metallbau GmbH',
-          breadcrumbHome: 'fiba Metallbau GmbH',
-          breadcrumbHome: 'fiba Metallbau GmbH'
-        }
-      });
-    });
+            $(document).ready(function () {
+              $("#nanoGallery1").nanoGallery({
+                kind: 'flickr',
+                userID: '134427604@N05',
+                thumbnailGutterWidth: 40,
+                thumbnailGutterHeight: 40,
+                thumbnailLabel: {
+                  hideIcons: true
+                },
+                breadcrumbAutoHideTopLevel: true,
+                albumSorting: 'titleAsc',
+                photoSorting: 'titleAsc',
+                colorScheme: 'light',
+                i18n: {
+                  breadcrumbHome: 'fiba Metallbau GmbH',
+                  breadcrumbHome: 'fiba Metallbau GmbH',
+                  breadcrumbHome: 'fiba Metallbau GmbH'
+                }
+              });
+            });
   </script>
 
   <script>
