Remove job offerings and add am suisse logo

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+
   <meta name="keywords" content="fiba Metallbau GmbH, Autounterstand, Balkon, Balkonverglasung, Einzelanfertigung, Fenstergitter, Gartenlaube, Gartentüre, Geländer, Glasdach, Glastüre, Grillartikel, Rettungsleiter, Skulptur, Tisch, Treppe">
   <meta name="author" content="Dominique Huber">
   <meta name="description" content="Firmenpräsentation der fiba Metallbau GmbH">
@@ -59,9 +59,6 @@
       <div class="row">
         <div class="col-md-6">
           <img src="img/logo.jpg" alt="Fiba Metallbau GmbH Logo" />
-          <br />
-          <br />
-          <br />
           <p class="intro-text">Ihr Partner für
             <mark>Autounterstände</mark>,
             <mark>Balkone</mark>,
@@ -78,9 +75,14 @@
             <mark>Skulpturen</mark>,
             <mark>Tische</mark>,
             <mark>Treppen</mark> und vieles mehr!</p>
-          <br />
-          <p>Ab sofort ist die neue Homepage für unser umfangreiches Grill-Sortiment online.<br /><a href="http://www.fiba-grillprodukte.ch"
+          <p>Ab sofort ist die neue Webseite für unser umfangreiches Grill-Sortiment online.<br /><a href="http://www.fiba-grillprodukte.ch"
               target="_blank">www.fiba-grillprodukte.ch</a></p>
+          <p>fiba Metallbau steht für echte Schweizer Produkte und ist daher offizieller Partner der AM Suisse</p>
+          <div class="logo_am_suisse_link">
+            <a target="_blank" href="https://www.amsuisse.ch" alt="AM Suisse">
+            <img class="logo_am_suisse" src="/img/logo_am_suisse.png" alt="AM Suisse">
+          </a>
+          </div>
         </div>
         <div class="col-md-6">
           <div id="carousel-fiba" class="carousel slide" data-ride="carousel">
@@ -203,14 +205,7 @@
   <div class="container fiba-content">
     <div class="row">
       <div class="col-md-12">
-        <p>Zur Ergänzung unseres Teams suchen wir doppelte Unterstützung!</p>
-        <h3>Metallbauer und Chefmonteur Metallbau</h3>
-        <br>
-        <p>Du hast eine Berufsausbildung im Metallbau, arbeitest selbstständig sowie zuverlässig und bist ein Teamplayer.</p>
-        <p>Wir sind ein Kleinbetrieb und bieten ein kollegiales und herausforderndes Arbeitsumfeld mit abwechslungsreichen Aufträgen.</p>
-        <br>
-        <p>Wir freuen uns auf Deine Bewerbung an:</p>
-        <p>fiba Metallbau GmbH, Schulweg 5, 8252 Schlatt</p>
+        <p>Aktuell haben wir keine offenen Stellen.</p>
       </div>
     </div>
   </div>
