--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <img src="img/logo.jpg" alt="Fiba Metallbau GmbH Logo" />
+          <img class="img-responsive" src="img/logo.jpg" alt="Fiba Metallbau GmbH Logo" />
           <p class="intro-text">Ihr Partner für
             <mark>Autounterstände</mark>,
             <mark>Balkone</mark>,
